--- a/style_dashboards.css
+++ b/style_dashboards.css
@@ -365,14 +365,14 @@
 }
 .services__card{
     margin: 1rem;
-    height: 525px;
+    height: 600px;
     width: 400px;
-    border-radius: 4px;
+    border-radius: 20px;
     background-image: linear-gradient(
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('/images/pic3.jpg');
+        url('/images/titanic.jpg');
     background-size: cover;
     position: relative;
     color: #fff;
@@ -383,7 +383,24 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('/images/pic4.jpg');   
+        url('/images/bank.jpg'); 
+    align-items: center;
+}
+
+.services__card:nth-child(3){
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(17,17,17,0.6) 100%),
+        url('/images/social_media.jpg'); 
+}
+
+.services__card:nth-child(4){
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(17,17,17,0.6) 100%),
+        url('/images/flights.jpeg'); 
 }
 
 .services h2{
@@ -419,7 +436,7 @@
 
 @media screen and (max-width: 960px) {
     .services{
-        height:1600px;
+        height:auto;
     }
     .services h1{
         font-size: 2rem;
@@ -433,7 +450,7 @@
 
 @media screen and (max-width: 480px) {
     .services{
-        height:1400px;
+        height:auto;
     }
     .services h1{
         font-size: 1.2rem;
@@ -465,13 +482,15 @@
 
 .footer__links{
     width: 100%;
-    max-width: 1000px;
+    max-width: auto;
     display: flex;
     justify-content: center;
 }
 
 .footer__link__wrapper{
     display: flex;
+    max-width: auto;
+    max-height: auto;
 }
 
 .footer__link__items{
@@ -501,6 +520,17 @@
 .footer__link__items    a:hover{
     color: #e9e9e9;
 transition: 0.3s ease-out;
+}
+@media screen and (max-width: 960px) {
+    .footer__container{
+        height:auto;
+    } 
+}
+
+@media screen and (max-width: 480px) {
+    .footer__container{
+        height:auto;
+    } 
 }
 
 /* Social Icons*/
