--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('/images/pic3.jpg');
+        url('/images/pic3.JPEG');
     background-size: cover;
     position: relative;
     color: #fff;
@@ -383,7 +383,7 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('/images/pic4.jpg');   
+        url('/images/pic4.JPEG');   
 }
 
 .services h2{
