--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@
 
 @media screen and (max-width: 960px) {
     .services{
-        height:1600px;
+        height:auto;
     }
     .services h1{
         font-size: 2rem;
@@ -433,7 +433,7 @@
 
 @media screen and (max-width: 480px) {
     .services{
-        height:1400px;
+        height:auto;
     }
     .services h1{
         font-size: 1.2rem;
