--- a/style.css
+++ b/style.css
@@ -465,7 +465,7 @@
 
 .footer__links{
     width: 100%;
-    max-width: 1000px;
+    max-width: auto;
     display: flex;
     justify-content: center;
 }
