--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('images/pic3.JPEG');
+        url('images/dataviz.jpeg');
     background-size: cover;
     position: relative;
     color: #fff;
@@ -383,9 +383,24 @@
         to bottom,
         rgba(0,0,0,0) 0%,
         rgba(17,17,17,0.6) 100%),
-        url('images/pic4.JPEG');   
+        url('images/automate.jpeg');   
 }
 
+.services__card:nth-child(3){
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(17,17,17,0.6) 100%),
+        url('images/articles.jpeg');   
+}
+
+.services__card:nth-child(4){
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 0%,
+        rgba(17,17,17,0.6) 100%),
+        url('images/pic3.JPEG');   
+}
 .services h2{
     position: absolute;
     top: 350px;
